Bullet Continuous Collision Detection and Physics Library
Erwin Coumans

2006 July 26 Erwin Coumans
	Upgraded to COLLADA-DOM 1.4.1, latest SVN version
	ColladaDemo can export snapshots to .dae
	
2006 July 24 Erwin Coumans
	Added Compound CollisionShape support
	(this is still low performance -> requires stackless tree-versus-tree traversal for better performance)

2006 July 15 Erwin Coumans
	Added initial support for Parallel execution (collision detection, constraint solving)
	See ParallelPhysicsEnvironment in Extras\PhysicsInterface\CcdPhysics
	
2006 July 10 Erwin Coumans
	Added MacOS X support (some build issues mainly)
		
2006 July 5 Erwin Coumans
	Improved COLLADA 1.4 physics import, both COLLADA-DOM and FCollada

2006 June 29 Erwin Coumans
	Refactoring of the broadphase
	Moved some optional files to Extras: Algebraic ccd and EPA, quickstep
	Moved the limits on bodies/overlap to 32k and 65k
	
2006 June 25 Erwin Coumans
	Added basic Collision Filtering, during broadphase
	Allow adding meshes to the TriangleIndexVertexArray,
	(input for TriangleMeshShape) 
	Preparation for CompoundShape

2006 June 19 Erwin Coumans
	Added support for COLLADA Physics Import.
	Both jam and Visual Studio can compile ColladaDemo

2006 June 18 Dirk Gregorius <dirk@dirkgregorius.de>
	Started implementing Generic6DOF joint and setup basic interface


2006 June 17 Frank Richter <resqu@gmx.ch>
	Bumped version in configure.ac to 1.5.6 (assuming that "1.5f" is
	  the next version released).
	Updated files in mk/autoconf and mk/jam with copies from CS; fixes a 
	  GLU detection issue on MinGW.
	Set msvc/bullet_ico.ico as the default application icon.
	Disabled exceptions for gcc builds.
	Applied a patch from Michael D. Adams to fix a warning with gcc.
2006 jUNE 16 Erwin Coumans
	Constraints now merge simulation islands.

2006 May 24
	Improved GJK accuracy, fixed GjkConvexCast issue, thanks to ~MyXa~ for reporting
	
2006 May 19
	Added restitution support