@@ -1,0 +1,3 @@
+PROJECT(BULLET_PHYSICS)
+
+SUBDIRS(LinearMath Bullet BulletDynamics Demos Extras)
