@@ -1,0 +1,10 @@
+ADD_LIBRARY(LINEAR_MATH
+Geometry.cpp    
+Quat.cpp       
+Vector.cpp      
+quickprof.cpp
+Matrix.cpp      
+Scalar.cpp      
+VectorBase.cpp
+)
+
